Code cleanup: Fix deprecations, clean unused imports,  Javadocs, etc.